Created additional files and got my CSV to work into a table.

--- a/annis_dan_project2/index.html
+++ b/annis_dan_project2/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0rc2/jquery.mobile-1.0rc2.min.css" />
-		
+		<link rel="stylesheet" href="style.css" />
 	</head> 
  
 	<body> 
@@ -26,7 +26,7 @@
 		
 		
 			<div data-role="footer" data-theme="a">
-			<h4>Dan Annis ver 1.1</h4>
+			<h4>Dan Annis </h4>
 			</div><!-- /footer -->
 			
 		</div><!-- /page -->
@@ -50,7 +50,7 @@
 		
 		
 			<div data-role="footer" data-theme="a">
-			<h4>Dan Annis ver 1.1</h4>
+			<h4>Dan Annis </h4>
 			</div><!-- /footer -->
 			
 		</div><!-- /page -->
@@ -73,7 +73,7 @@
 		
 		
 			<div data-role="footer" data-theme="a">
-			<h4>Dan Annis ver 1.1</h4>
+			<h4>Dan Annis </h4>
 			</div><!-- /footer -->
 			
 		</div><!-- /page -->
@@ -96,15 +96,15 @@
 		
 		
 			<div data-role="footer" data-theme="a">
-			<h4>Dan Annis ver 1.1</h4>
+			<h4>Dan Annis </h4>
 			</div><!-- /footer -->
 			
 		</div><!-- /page -->
-		
+		<script type="text/javascript" src="csvtotable.js"></script>
 		<script type="text/javascript" src="main.js"></script> 
 		<script type="text/javascript" src="taskList.json"></script>
  		<script type="text/javascript" src="daySpec.xml"></script>
- 		<script type="text/javascript" src="supDataPHP.php"></script>
+ 		
  	</body> 
 
 	
