--- a/annis_dan_project2/index.html
+++ b/annis_dan_project2/index.html
@@ -2,11 +2,11 @@
 <html> 
 	<head>
 				<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<script type="text/javascript" src="jquery.js"></script>
+		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0rc2/jquery.mobile-1.0rc2.min.css" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head> 
  
 	<body> 
@@ -18,9 +18,9 @@
 				
 			<div data-role="content">
 				<ul data-role="listview" data-theme="b" id="nav">
-					<li><a href='#mainList'>Daily Task List</a></li>
-					<li><a href='#dayList' data-transition="slideup">Day Specific List</a></li>
-					<li><a href='#supContact'>Supervisor Contact List</a></li>
+					<li><a href='#mainList'>Daily Task List (JSON)</a></li>
+					<li><a href='#dayList' data-transition="slideup">Day Specific List (XML)</a></li>
+					<li><a href='#supContact'>Supervisor Contact List (CSV)</a></li>
 				</ul>
 			</div>
 		
@@ -100,10 +100,10 @@
 			</div><!-- /footer -->
 			
 		</div><!-- /page -->
-		<script type="text/javascript" src="csvtotable.js"></script>
-		<script type="text/javascript" src="main.js"></script> 
-		<script type="text/javascript" src="taskList.json"></script>
- 		<script type="text/javascript" src="daySpec.xml"></script>
+		<script type="text/javascript" src="js/csvtotable.js"></script>
+		<script type="text/javascript" src="js/main.js"></script> 
+		<script type="text/javascript" src="js/taskList.json"></script>
+ 		<script type="text/javascript" src="js/daySpec.xml"></script>
  		
  	</body> 
 
