--- a/annis_dan_project2/index.html
+++ b/annis_dan_project2/index.html
@@ -67,7 +67,7 @@
 			</div><!-- /header -->
 				
 			<div data-role="content" id="page-wrap2" >
-				<ul data-role="listview" data-theme="b" id="page-wrap"></ul>
+				<ul data-role="listview" data-theme="b" id="specList"></ul>
 			</div>
 		
 		
@@ -102,8 +102,8 @@
 		</div><!-- /page -->
 		<script type="text/javascript" src="js/csvtotable.js"></script>
 		<script type="text/javascript" src="js/main.js"></script> 
-		<script type="text/javascript" src="js/taskList.json"></script>
- 		<script type="text/javascript" src="js/daySpec.xml"></script>
+		<script type="text/javascript" src="xhr/taskList.json"></script>
+ 		<script type="text/javascript" src="xhr/daySpec.xml"></script>
  		
  	</body> 
 
