--- a/annis_dan_project2.1/index.html
+++ b/annis_dan_project2.1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> 
+<!-- Dan Annis Project 2 ASD 11/11 -->
 <html> 
 	<head>
-				<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
